tests/toylang/neg/000771_mutation.toylang
program a = { a = program(a); } .
